# robot_system

./: .gitignore  CLAUDE.md  GEMINI.md
docs/.obsidian/: workspace.json
docs/base/: 代码结构.md  代码结构注解.md  技术路线.md
docs/go2/: Go2机器人Ros2通信指南.md  ROS2接口信息.md  ROS2消息类型.md  Unitree_ROS2_Messages.md  代码结构具体实现计划.md  机器人接口层实现清单.md  机器人接口层实现顺序.md
src/robot_interfaces/: README.md
src/robot_interfaces/robot_adapters/go2_adapter/: CMakeLists.txt  README.md  package.xml
src/robot_interfaces/robot_adapters/go2_adapter/config/: go2_adapter_config.yaml
src/robot_interfaces/robot_adapters/go2_adapter/examples/: test_go2_communication.cpp  test_go2_message_converter.cpp  test_go2_motion_controller.cpp  test_go2_power_manager.cpp  test_go2_quadruped_tricks.cpp  test_go2_sensor_interface.cpp  test_go2_state_monitor.cpp
src/robot_interfaces/robot_adapters/go2_adapter/include/robot_adapters/go2_adapter/: go2_adapter.hpp  go2_communication.hpp  go2_config_manager.hpp  go2_message_converter.hpp  go2_motion_controller.hpp  go2_power_manager.hpp  go2_quadruped_tricks.hpp  go2_sensor_interface.hpp  go2_state_monitor.hpp
src/robot_interfaces/robot_adapters/go2_adapter/src/: go2_adapter.cpp  go2_adapter_node.cpp  go2_communication.cpp  go2_config_manager.cpp  go2_message_converter.cpp  go2_motion_controller.cpp  go2_motion_test_node.cpp  go2_power_manager.cpp  go2_quadruped_tricks.cpp  go2_sensor_interface.cpp  go2_state_monitor.cpp
src/robot_interfaces/robot_base_interfaces/: README.md
src/robot_interfaces/robot_base_interfaces/docs/: architecture_description.md
src/robot_interfaces/robot_base_interfaces/motion_interface/: CMakeLists.txt  README.md  package.xml
src/robot_interfaces/robot_base_interfaces/motion_interface/include/robot_base_interfaces/common/: result.hpp
src/robot_interfaces/robot_base_interfaces/motion_interface/include/robot_base_interfaces/motion_interface/: i_motion_controller.hpp  i_quadruped_tricks.hpp  motion_types.hpp
src/robot_interfaces/robot_base_interfaces/motion_interface/src/: motion_types.cpp
src/robot_interfaces/robot_base_interfaces/motion_interface/test/: test_i_motion_controller.cpp  test_motion_types.cpp
src/robot_interfaces/robot_base_interfaces/power_interface/: CMakeLists.txt  README.md  package.xml
src/robot_interfaces/robot_base_interfaces/power_interface/include/robot_base_interfaces/power_interface/: i_power_manager.hpp  power_types.hpp
src/robot_interfaces/robot_base_interfaces/power_interface/src/: power_types.cpp
src/robot_interfaces/robot_base_interfaces/power_interface/test/: test_power_types.cpp
src/robot_interfaces/robot_base_interfaces/sensor_interface/: CMakeLists.txt  README.md  package.xml
src/robot_interfaces/robot_base_interfaces/sensor_interface/include/robot_base_interfaces/sensor_interface/: i_sensor_interface.hpp  sensor_types.hpp
src/robot_interfaces/robot_base_interfaces/sensor_interface/src/: sensor_types.cpp
src/robot_interfaces/robot_base_interfaces/sensor_interface/test/: test_sensor_types.cpp
src/robot_interfaces/robot_base_interfaces/state_interface/: CMakeLists.txt  README.md  package.xml
src/robot_interfaces/robot_base_interfaces/state_interface/include/robot_base_interfaces/state_interface/: i_state_monitor.hpp  state_types.hpp
src/robot_interfaces/robot_base_interfaces/state_interface/src/: state_types.cpp
src/robot_interfaces/robot_base_interfaces/state_interface/test/: test_robot_state_types.cpp
src/robot_interfaces/robot_factory/adapter_factory/: CMakeLists.txt  README.md  package.xml
src/robot_interfaces/robot_factory/adapter_factory/include/robot_factory/adapter_factory/: adapter_registry.hpp  i_robot_adapter.hpp  robot_adapter_factory.hpp
src/robot_interfaces/robot_factory/adapter_factory/src/: adapter_registry.cpp  i_robot_adapter.cpp  robot_adapter_factory.cpp
src/robot_interfaces/robot_factory/capability_manager/: CMakeLists.txt  README.md  package.xml
src/robot_interfaces/robot_factory/capability_manager/config/: capability_matrix.yaml  default_capabilities.yaml
src/robot_interfaces/robot_factory/capability_manager/include/robot_factory/capability_manager/: capability_definitions.hpp  capability_loader.hpp  capability_manager.hpp  capability_types.hpp
src/robot_interfaces/robot_factory/capability_manager/src/: capability_definitions.cpp  capability_loader.cpp  capability_manager.cpp
src/robot_interfaces/robot_factory/docs/: architecture_description.md  comprehensive_architecture.md  robot_factory_analysis.md
src/robot_interfaces/robot_factory/robot_detector/: CMakeLists.txt  README.md  package.xml
src/robot_interfaces/robot_factory/robot_detector/include/robot_factory/robot_detector/: robot_detector.hpp  robot_types.hpp
src/robot_interfaces/robot_factory/robot_detector/src/: robot_detector.cpp  robot_types.cpp
