<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>robot_detector</name>
  <version>1.0.0</version>
  <description>Robot factory robot_detector package</description>
  <maintainer email="developer@example.com">Claude Code</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rclcpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>motion_interface</build_depend>
  <build_depend>sensor_interface</build_depend>
  <build_depend>state_interface</build_depend>
  <build_depend>power_interface</build_depend>

  <exec_depend>rclcpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>motion_interface</exec_depend>
  <exec_depend>sensor_interface</exec_depend>
  <exec_depend>state_interface</exec_depend>
  <exec_depend>power_interface</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>